--- a/game/2048-online.html
+++ b/game/2048-online.html
@@ -32,7 +32,7 @@
 		<div id='outertopbar'>
 			<section id='topbarcontainer'>
 				<ul class="left">
-					<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg><a>Phone: 182 2408 8983</a></li>
+					<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg><a>Phone: +86 182 2408 8983</a></li>
 					<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg><a>Email: 670292548@qq.com</a></li>
 				</ul>
 				<div class="right">
@@ -230,7 +230,7 @@
 								<a>Address: </a><i>ChengDu, China</i>
 							</li>
 							<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
-								<a>Phone: </a><i>182 2408 8983</i>
+								<a>Phone: </a><i>+86 182 2408 8983</i>
 							</li>
 							<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
 								<a>Email: </a><i>670292548@qq.com</i>
