--- a/game/2048.html
+++ b/game/2048.html
@@ -202,7 +202,7 @@
 					<li><h5>Contact</h5>
 						<ul class="footercontact">
 							<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_location'></use></svg>
-								<a>Address: </a><i>ChengDu, China</i>
+								<a>Address: </a><i>Chengdu, China</i>
 							</li>
 							<li><svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
 								<a>Phone: </a><i>+86 182 2408 8983</i>
