--- a/game/2048.html
+++ b/game/2048.html
@@ -183,7 +183,6 @@
 				<ul>
 					<li><h5>Links</h5>
 						<ol class="footerlinks">
-							<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a></li>
 							<li><a href="http://blog.csdn.net/icysky1989" target="_blank">CSDN Blog</a></li>
 							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="http://t.qq.com/lanewalker" target="_blank">Tencent Weibo</a></li>
@@ -283,7 +282,7 @@
 		"common":{
 			"bdSnsKey":{},
 			"bdDesc":"一起来玩2048吧，休闲娱乐就要单机畅玩，聊天交友就选双人在线！",
-			"bdText":"StudEase.cn",
+			"bdText":"studease.cn",
 			"bdComment":"（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
 			"bdPic":"http://studease.cn/images/contents/effect-2048.jpg",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
