--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
 				<ul>
 					<li><h5>Links</h5>
 						<ol class="footerlinks">
-							<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a></li>
 							<li><a href="http://blog.csdn.net/icysky1989" target="_blank">CSDN Blog</a></li>
 							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="http://t.qq.com/lanewalker" target="_blank">Tencent Weibo</a></li>
@@ -247,8 +246,8 @@
 		"common":{
 			"bdSnsKey":{},
 			"bdDesc":"Slicease.js 2.0发布",
-			"bdText":"StudEase.cn",
-			"bdComment":"项目地址：https://github.com/studease/Slicease，StudEase.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
+			"bdText":"studease.cn",
+			"bdComment":"项目地址：https://github.com/studease/Slicease，studease.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
 			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
