--- a/open/slicease.html
+++ b/open/slicease.html
@@ -67,15 +67,15 @@
 								</li>
 								<li><a href="#" class="current">OPEN</a>
 									<ul>
-										<li><a href='open/slicease.html'>slicease.js 2.0</a></li>
-										<li><a href='open/chatease.html'>chatease.js</a></li>
-										<li><a href='open/chatease-server.html'>chatease-server</a></li>
+										<li><a href='/open/slicease.html'>slicease.js 2.0</a></li>
+										<li><a href='/open/chatease.html'>chatease.js</a></li>
+										<li><a href='/open/chatease-server.html'>chatease-server</a></li>
 									</ul>
 								</li>
 								<li><a href="#">GAME</a>
 									<ul>
-										<li><a href='game/2048.html'>2048</a></li>
-										<li><a href='game/2048-online.html'>2048 online</a></li>
+										<li><a href='/game/2048.html'>2048</a></li>
+										<li><a href='/game/2048-online.html'>2048 online</a></li>
 									</ul>
 								</li>
 								<li><a href="#">SUB</a>
