--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -116,7 +116,7 @@
 				</p>
 				
 				<p>
-					This is a server-side sample project of maven for chatease, using spring-websocket.
+					This is a server-side sample project of maven for <a href='/open/chatease.html' target='_blank'>chatease</a> using spring-websocket.
 					<br/>
 				</p>
 				
