--- a/open/chatease.html
+++ b/open/chatease.html
@@ -214,7 +214,7 @@ _eventMapping = {
 				
 				<h5>Server-side sample project:</h5>
 				<p>
-					<a href='open/chatease-server.html' target='_blank'>chatease-server</a>
+					<a href='/open/chatease-server.html' target='_blank'>chatease-server</a>
 				</p>
 				
 				<h4>Software License</h4>
