--- a/open/chatease.html
+++ b/open/chatease.html
@@ -62,7 +62,7 @@
 								<li><a href="/">HOME</a></li>
 								<li><a href="#">STUDY</a>
 									<ul>
-										<li><a href='http://blog.csdn.net/icysky1989'>IT</a></li>
+										<li><a href='https://github.com/studease'>IT</a></li>
 									</ul>
 								</li>
 								<li><a href="#" class="current">OPEN</a>
@@ -132,7 +132,7 @@
 					<li>Opera</li>
 					<li>Safari</li>
 					<li>IE10-11, Edge</li>
-					<li>IE5-9 (With modified sockjs)</li>
+					<li>IE7-9 (With modified sockjs)</li>
 				</ul>
 				
 				<h4>Example</h4>
