--- a/game/2048.html
+++ b/game/2048.html
@@ -62,7 +62,7 @@
 								<li><a href="/">HOME</a></li>
 								<li><a href="#">STUDY</a>
 									<ul>
-										<li><a href='http://blog.csdn.net/icysky1989'>IT</a></li>
+										<li><a href='https://github.com/studease'>IT</a></li>
 									</ul>
 								</li>
 								<li><a href="#">OPEN</a>
