--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -62,7 +62,7 @@
 								<li><a href="/">HOME</a></li>
 								<li><a href="#">STUDY</a>
 									<ul>
-										<li><a href='https://github.com/studease'>IT</a></li>
+										<li><a href='https://github.com/studease' target='_blank'>IT</a></li>
 									</ul>
 								</li>
 								<li><a href="#" class="current">OPEN</a>
