--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<li><a href="/" class="current">HOME</a></li>
 								<li><a href="#">STUDY</a>
 									<ul>
-										<li><a href='https://github.com/studease'>IT</a></li>
+										<li><a href='https://github.com/studease' target='_blank'>IT</a></li>
 									</ul>
 								</li>
 								<li><a href="#">OPEN</a>
