--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -248,8 +248,8 @@
 			"bdSnsKey":{},
 			"bdDesc":"chatease.js",
 			"bdText":"studease.cn",
-			"bdComment":"Chatease.js是一个WebSocket网页聊天室项目，源码（https://github.com/studease/chatease）。",
-			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
+			"bdComment":"This is a server-side sample project of maven for chatease using spring-websocket.",
+			"bdPic":"",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
 		"share":{},
