--- a/open/chatease.html
+++ b/open/chatease.html
@@ -332,8 +332,8 @@ _eventMapping = {
 			"bdSnsKey":{},
 			"bdDesc":"chatease.js",
 			"bdText":"studease.cn",
-			"bdComment":"Chatease.js是一个WebSocket网页聊天室项目，源码（https://github.com/studease/chatease）。",
-			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
+			"bdComment":"This is a client-side script of chat room, transmitting through websocket, with skin build in.",
+			"bdPic":"",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
 		"share":{},
