--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -246,9 +246,9 @@
 	window._bd_share_config = {
 		"common":{
 			"bdSnsKey":{},
-			"bdDesc":"chatease.js",
+			"bdDesc":"chatease-server",
 			"bdText":"studease.cn",
-			"bdComment":"This is a server-side sample project of maven for chatease using spring-websocket.",
+			"bdComment":"This is a server-side sample project for chatease using spring-websocket.",
 			"bdPic":"",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
