--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>chatease.js - open - studease.cn</title>
+	<title>chatease-server - open - studease.cn</title>
 	<meta name="robots" content="index, follow" />
     <meta name="keywords" content="chatease,chatease-server,websocket,spring-websocket,sockjs,chat,chatroom,网页聊天室,网页聊天室服务端" />
     <meta name="description" content="This is a client-side script of chat room, transmitting through websocket, with skin build in." />
