--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -130,7 +130,7 @@
 					You may have an user login system, and need to control the chatting behavior. Then supply an interface to verify and return the user info.
 				</p>
 				<p>
-					To have a quick test, make the userinfo.json file available from http://localhost:81/websocket/userinfo.json.
+					By default, webapp/userinfo/userinfo.json is used.
 				</p>
 				
 				<h4>Software License</h4>
