--- a/open/chatease.html
+++ b/open/chatease.html
@@ -112,6 +112,9 @@
 				<p>
 					[source] <a href='https://github.com/studease/chatease' target='_blank'>
 						https://github.com/studease/chatease
+					</a><br/>
+					[zh_doc] <a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>
+						http://blog.csdn.net/icysky1989/article/details/52138527
 					</a>
 				</p>
 				
