--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>studease.cn</title>
 	<meta name="robots" content="index, follow" />
-    <meta name="keywords" content="html5,slicease.js,2048,2048 online,chat online" />
-    <meta name="description" content="" />
+	<meta name="keywords" content="html5,playease.js,chatease.js,chatease-server,slicease.js,2048,2048 online,flv live streaming player,websocket chat room" />
+	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
@@ -70,6 +70,7 @@
 								</li>
 								<li><a href="#">OPEN</a>
 									<ul>
+										<li><a href='/open/playease.html'>playease.js</a></li>
 										<li><a href='/open/slicease.html'>slicease.js 2.0</a></li>
 										<li><a href='/open/chatease.html'>chatease.js</a></li>
 										<li><a href='/open/chatease-server.html'>chatease-server</a></li>
@@ -115,6 +116,7 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released.<i> - Feb. 10, 2017</i></li>
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
 					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released.<i> - Aug. 1, 2016</i></li>
 					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
@@ -150,6 +152,7 @@
 				<ul>
 					<li><h5>LINKS</h5>
 						<ol class="footerlinks">
+							<li><a href="https://github.com/studease/playease" target="_blank">Playease.js</a></li>
 							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/chatease" target="_blank">Chatease.js</a></li>
 							<li><a href="https://github.com/studease/chatease-server" target="_blank">Chatease-server</a></li>
@@ -191,7 +194,7 @@
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright &copy 2014-2016 studease.cn | All Rights Reserved | </a>
+				<a>Copyright &copy 2014-2017 studease.cn | All Rights Reserved | </a>
 				<script type="text/javascript">
 					var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 					document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5750633c14e5050fee9c8f4a1679ab2d' type='text/javascript'%3E%3C/script%3E"));
