--- a/open/chatease.html
+++ b/open/chatease.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>chatease.js - open - studease.cn</title>
 	<meta name="robots" content="index, follow" />
-    <meta name="keywords" content="chatease,chatease.js,websocket,sockjs,chat,chatroom,聊天室,网页聊天室" />
-    <meta name="description" content="This is a client-side script of chat room, transmitting through websocket, with skin build in." />
+	<meta name="keywords" content="chatease,chatease.js,websocket,sockjs,chat,chatroom,聊天室,网页聊天室" />
+	<meta name="description" content="This is a client-side script of chat room, transmitting through websocket, with skin build in." />
 	<meta name="author" content="Tony Lau" />
 	
 	<link rel="shortcut icon" href="../images/favicon.ico">
@@ -67,6 +67,7 @@
 								</li>
 								<li><a href="#" class="current">OPEN</a>
 									<ul>
+										<li><a href='/open/playease.html'>playease.js</a></li>
 										<li><a href='/open/slicease.html'>slicease.js 2.0</a></li>
 										<li><a href='/open/chatease.html'>chatease.js</a></li>
 										<li><a href='/open/chatease-server.html'>chatease-server</a></li>
@@ -251,6 +252,7 @@ _eventMapping = {
 				<ul>
 					<li><h5>LINKS</h5>
 						<ol class="footerlinks">
+							<li><a href="https://github.com/studease/playease" target="_blank">Playease.js</a></li>
 							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/chatease" target="_blank">Chatease.js</a></li>
 							<li><a href="https://github.com/studease/chatease-server" target="_blank">Chatease-server</a></li>
@@ -292,7 +294,7 @@ _eventMapping = {
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright &copy 2014-2016 studease.cn | All Rights Reserved | </a>
+				<a>Copyright &copy 2014-2017 studease.cn | All Rights Reserved | </a>
 				<script type="text/javascript">
 					var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 					document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5750633c14e5050fee9c8f4a1679ab2d' type='text/javascript'%3E%3C/script%3E"));
