--- a/open/playease.html
+++ b/open/playease.html
@@ -13,7 +13,7 @@
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="stylesheet" type="text/css" href="../css/prettify.css" />
-	<script type='text/javascript' src='js/playease.min.js'></script>
+	<script type='text/javascript' src='../js/playease.min.js'></script>
 </head>
 <body>
 <div style='display:none;'>
