--- a/open/playease.html
+++ b/open/playease.html
@@ -157,7 +157,10 @@ _defaults = {
     url: 'http://' + window.location.host + '/vod/sample.flv',
     width: 960,
     height: 540,
+    cors: 'no-cors',
     bufferTime: .1,
+    controls: true,
+    autoplay: true,
     render: {
         name: renderModes.DEFAULT,
         skin: {
@@ -296,7 +299,8 @@ _eventMapping = {
 			url: '/vod/sample.flv',
 			width: 960,
 			height: 540,
-			cors: 'no-cors'
+			cors: 'no-cors',
+			autoplay: false
 		});
 		
 		prettyPrint();
