--- a/open/playease.html
+++ b/open/playease.html
@@ -142,7 +142,8 @@ playease('player').setup({
     url: '/vod/sample.flv',
     width: 640,
     height: 360,
-    cors: 'no-cors'
+    cors: 'no-cors',
+    poster: 'sample.png'
 });
 </pre>
 <br/>
@@ -161,6 +162,7 @@ _defaults = {
     bufferTime: .1,
     controls: true,
     autoplay: true,
+    poster: null,
     render: {
         name: renderModes.DEFAULT,
         skin: {
@@ -300,7 +302,8 @@ _eventMapping = {
 			width: 640,
 			height: 360,
 			cors: 'no-cors',
-			autoplay: false
+			autoplay: false,
+			poster: '../images/contents/playease.poster.png'
 		});
 		
 		prettyPrint();
