--- a/open/playease.html
+++ b/open/playease.html
@@ -343,9 +343,9 @@ _eventMapping = {
 	window._bd_share_config = {
 		"common":{
 			"bdSnsKey":{},
-			"bdDesc":"chatease.js",
+			"bdDesc":"playease.js",
 			"bdText":"studease.cn",
-			"bdComment":"This is a client-side script of chat room, transmitting through websocket, with skin build in.",
+			"bdComment":"This is a html5 media player for flv live streaming.",
 			"bdPic":"",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
