--- a/open/chatease.html
+++ b/open/chatease.html
@@ -67,8 +67,8 @@
 								</li>
 								<li><a href="#" class="current">OPEN</a>
 									<ul>
+										<li><a href='/open/slicease.html'>slicease.js 3.0</a></li>
 										<li><a href='/open/playease.html'>playease.js</a></li>
-										<li><a href='/open/slicease.html'>slicease.js 2.0</a></li>
 										<li><a href='/open/chatease.html'>chatease.js</a></li>
 										<li><a href='/open/chatease-server.html'>chatease-server</a></li>
 									</ul>
@@ -252,8 +252,8 @@ _eventMapping = {
 				<ul>
 					<li><h5>LINKS</h5>
 						<ol class="footerlinks">
+							<li><a href="https://github.com/studease/slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/playease" target="_blank">Playease.js</a></li>
-							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/chatease" target="_blank">Chatease.js</a></li>
 							<li><a href="https://github.com/studease/chatease-server" target="_blank">Chatease-server</a></li>
 							<li><a href="http://share.baidu.com/" target="_blank">Baidu Share</a></li>
