--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="html5,playease.js,chatease.js,chatease-server,slicease.js,2048,2048 online,flv live streaming player,websocket chat room" />
+	<meta name="keywords" content="html5,webgl,slicease.js,playease.js,chatease.js,chatease-server,2048,2048 online,flv live streaming player,websocket chat room" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<script type='text/javascript' src='js/gl-matrix-min.js'></script>
 	<script type='text/javascript' src='js/slicease.min.js'></script>
 </head>
 <body>
@@ -70,8 +71,8 @@
 								</li>
 								<li><a href="#">OPEN</a>
 									<ul>
+										<li><a href='/open/slicease.html'>slicease.js 3.0</a></li>
 										<li><a href='/open/playease.html'>playease.js</a></li>
-										<li><a href='/open/slicease.html'>slicease.js 2.0</a></li>
 										<li><a href='/open/chatease.html'>chatease.js</a></li>
 										<li><a href='/open/chatease-server.html'>chatease-server</a></li>
 									</ul>
@@ -116,26 +117,27 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released.<i> - Feb. 20, 2017</i></li>
 					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released.<i> - Feb. 10, 2017</i></li>
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
 					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released.<i> - Aug. 1, 2016</i></li>
-					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
-					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
 						and reprinted by many others, e.g. 
 							<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
 							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
 							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
-						<a href="https://github.com/studease/Slicease" target='_blank'>slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
+						<a href="https://github.com/studease/slicease" target='_blank'>slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
 					<li>Sumzee Decor introduced nearly 100 decoration cases.<i> - Nov. 17, 2014</i></li>
 					<li>Sumzee Decor beta came online.<i> - Nov. 4, 2014</i></li>
 					<li><a href='http://studease.cn/game/2048-online.html' target='_blank'>2048-Online</a> came online.<i> - Oct. 18, 2014</i></li>
 					<li>1st game which is similar to <a href='http://studease.cn/game/2048.html' target='_blank'>2048</a> came online.<i> - Oct. 16, 2014</i></li>
 					<li>Tutorials of Slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
-						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
-					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
+						<a href='https://github.com/studease/slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
 					<li>Blog <a href="/">studease.cn</a> is available.<i> - Sep. 22, 2014</i></li>
 				</ul>
     		</div>
@@ -152,8 +154,8 @@
 				<ul>
 					<li><h5>LINKS</h5>
 						<ol class="footerlinks">
+							<li><a href="https://github.com/studease/slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/playease" target="_blank">Playease.js</a></li>
-							<li><a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a></li>
 							<li><a href="https://github.com/studease/chatease" target="_blank">Chatease.js</a></li>
 							<li><a href="https://github.com/studease/chatease-server" target="_blank">Chatease-server</a></li>
 							<li><a href="http://share.baidu.com/" target="_blank">Baidu Share</a></li>
@@ -257,7 +259,7 @@
 			"bdSnsKey":{},
 			"bdDesc":"slicease.js 2.0发布",
 			"bdText":"studease.cn",
-			"bdComment":"项目地址：https://github.com/studease/Slicease，studease.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
+			"bdComment":"项目地址：https://github.com/studease/slicease，studease.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
 			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
