--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="html5,webgl,slicease.js,playease.js,chatease.js,chatease-server,2048,2048 online,flv live streaming player,websocket chat room" />
+	<meta name="keywords" content="html5,webgl,slicease.js,playease.js,chatease.js,chatease-server,flv live streaming player,websocket chat room,2048,2048 online" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -118,7 +118,7 @@
     			<h4>Latest News</h4>
 				<ul class="latestnews">
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released.<i> - Feb. 20, 2017</i></li>
-					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released.<i> - Feb. 10, 2017</i></li>
+					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An flv live streaming player.<i> - Feb. 10, 2017</i></li>
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
 					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released.<i> - Aug. 1, 2016</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
@@ -255,9 +255,9 @@
 	window._bd_share_config = {
 		"common":{
 			"bdSnsKey":{},
-			"bdDesc":"slicease.js 2.0发布",
+			"bdDesc":"slicease.js 3.0 released",
 			"bdText":"studease.cn",
-			"bdComment":"项目地址：https://github.com/studease/slicease，studease.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
+			"bdComment":"项目地址：https://github.com/studease/slicease，studease.cn已同步更新，采用webgl硬件加速更流畅，猛戳这里看效果！",
 			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
