--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="html5,webgl,slicease.js,playease.js,chatease.js,chatease-server,flv live streaming player,websocket chat room,2048,2048 online" />
+	<meta name="keywords" content="html5,webgl,slicease.js,playease.js,chatease.js,chatease-server,html5 video player,flv live streaming player,websocket chat room,图片轮播,2048,2048 online" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
