--- a/open/slicease.html
+++ b/open/slicease.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>slicease.js - open - studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="webgl,slicease,slicease.js,html5,canvas,3D,slider,rotator,图片切换,图片滚动,图片轮播,网站新闻,新闻切换" />
+	<meta name="keywords" content="slicease,slicease.js,html5,canvas,webgl,3D,rotator,slider,图片切换,图片滚动,图片轮播,网站新闻,新闻切换" />
 	<meta name="description" content="This is a 3D image rotator using html5 canvas, designed for my homepage." />
 	<meta name="author" content="Tony Lau" />
 	
