--- a/open/chatease.html
+++ b/open/chatease.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>chatease.js - open - studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="chatease,chatease.js,websocket,sockjs,chat,chatroom,聊天室,网页聊天室" />
+	<meta name="keywords" content="chatease,chatease.js,html5,websocket,sockjs,chat,chatroom,聊天室,websocket聊天室,html5聊天室,网页聊天室" />
 	<meta name="description" content="This is a client-side script of chat room, transmitting through websocket, with skin build in." />
 	<meta name="author" content="Tony Lau" />
 	
@@ -230,7 +230,7 @@ _eventMapping = {
 					</li>
 				</ul>
 				
-				<h5>Server-side sample project:</h5>
+				<h5>Server-side project:</h5>
 				<p>
 					<a href='../open/chatease-server.html' target='_blank'>chatease-server</a>
 				</p>
