--- a/open/playease.html
+++ b/open/playease.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>playease.js - open - studease.cn</title>
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease,playease.js,html5 video player,flv media player,flv live streaming player,html5直播播放器,flv播放器" />
+	<meta name="keywords" content="playease,playease.js,html5,flv,video,flv player,html5 video player,flv media player,flv live streaming player,html5 flv播放器,html5直播播放器,flv播放器" />
 	<meta name="description" content="This is a html5 media player for flv live streaming." />
 	<meta name="author" content="Tony Lau" />
 	
