--- a/open/chatease.html
+++ b/open/chatease.html
@@ -120,7 +120,7 @@
 				</p>
 				
 				<p>
-					This is a client-side script of chat room, transmitting through websocket, with skin build in.
+					This is a client-side script for websocket chatting, with skin build in.
 					<br/>
 				</p>
 				
