--- a/open/playease.html
+++ b/open/playease.html
@@ -118,7 +118,7 @@
 				</p>
 				
 				<p>
-					This is a html5 media player for flv live streaming.
+					Playease.js is a html5 flv video player.
 					<br/>
 				</p>
 				
