--- a/open/slicease.html
+++ b/open/slicease.html
@@ -120,7 +120,7 @@
 				</p>
 				
 				<p>
-					This is a 3D image rotator using html5 canvas, designed for my homepage.
+					This is a 3D image rotator using html5 canvas/webgl, designed for my homepage.
 					<br/>
 				</p>
 				
@@ -129,11 +129,10 @@
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released.<i> - Feb. 20, 2017</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
-						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
-						and reprinted by many others, e.g. 
-							<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
-							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
-							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
+						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, and reprinted by many others, e.g. 
+						<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
+						<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
+						<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
 						<a href="https://github.com/studease/slicease" target='_blank'>slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
 					<li>Tutorials of slicease.js on 
