--- a/index.html
+++ b/index.html
@@ -117,17 +117,16 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released.<i> - Feb. 20, 2017</i></li>
-					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An flv live streaming player.<i> - Feb. 10, 2017</i></li>
-					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
-					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released.<i> - Aug. 1, 2016</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released - Using WebGL.<i> - Feb. 20, 2017</i></li>
+					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An html5 flv video player.<i> - Feb. 10, 2017</i></li>
+					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released - A websocket server for chatting.<i> - Aug. 4, 2016</i></li>
+					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released - A websocket chatting client.<i> - Aug. 1, 2016</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
-						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
-						and reprinted by many others, e.g. 
-							<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
-							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
-							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
+						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, and reprinted by many others, e.g. 
+						<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
+						<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
+						<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
 						<a href="https://github.com/studease/slicease" target='_blank'>slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
 					<li>Sumzee Decor introduced nearly 100 decoration cases.<i> - Nov. 17, 2014</i></li>
