--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<li>Tutorials of Slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
 						<a href='https://github.com/studease/slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
-					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 1.0 released - A 3D image rotator.<i> - Sep. 28, 2014</i></li>
 					<li>Blog <a href="/">studease.cn</a> is available.<i> - Sep. 22, 2014</i></li>
 				</ul>
     		</div>
