--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -126,7 +126,7 @@
 				
 				<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
+					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released - A websocket server for chatting.<i> - Aug. 4, 2016</i></li>
 				</ul>
 				
 				<h4>Build & Run</h4>
