--- a/open/playease.html
+++ b/open/playease.html
@@ -124,7 +124,7 @@
 				
 				<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released.<i> - Feb. 10, 2017</i></li>
+					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An html5 flv video player.<i> - Feb. 10, 2017</i></li>
 				</ul>
 				
 				<h4>Example (Uncompleted, coming soon.)</h4>
