--- a/open/chatease.html
+++ b/open/chatease.html
@@ -126,7 +126,7 @@
 				
 				<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released.<i> - Aug. 1, 2016</i></li>
+					<li><a href="https://github.com/studease/chatease" target='_blank'>Chatease.js</a> beta released - A websocket chatting client.<i> - Aug. 1, 2016</i></li>
 				</ul>
 				
 				<h4>Tested</h4>
