--- a/open/slicease.html
+++ b/open/slicease.html
@@ -126,7 +126,7 @@
 				
 				<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released.<i> - Feb. 20, 2017</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released - Using WebGL.<i> - Feb. 20, 2017</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 2.0 released.<i> - Dec. 30, 2015</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, and reprinted by many others, e.g. 
@@ -138,7 +138,7 @@
 					<li>Tutorials of slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
 						<a href='https://github.com/studease/slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
-					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 1.0 released - A 3D image rotator.<i> - Sep. 28, 2014</i></li>
 				</ul>
 				
 				<h4>Example</h4>
