--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- END HEADER -->
 	
 	<div id='outerslider'>
-		<section id='slidercontainer'></section>
+		<section id='slicer'></section>
 	</div>
 	
 	<!-- MAIN CONTENT -->
@@ -212,10 +212,10 @@
 
 <script type="text/javascript">
 	window.onload = function(){
-		slicease('slidercontainer').setup({
+		slicease('slicer').setup({
 			width: 1200,
 			height: 500,
-			sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'],
+			sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png', 'images/contents/img4.png'],
 			range: '3-9'
 		});
 		
