--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- END HEADER -->
 	
 	<div id='outerslider'>
-		<section id='slicer'></section>
+		<section id='slidercontainer'></section>
 	</div>
 	
 	<!-- MAIN CONTENT -->
@@ -212,7 +212,7 @@
 
 <script type="text/javascript">
 	window.onload = function(){
-		slicease('slicer').setup({
+		slicease('slidercontainer').setup({
 			width: 1200,
 			height: 500,
 			sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png', 'images/contents/img4.png'],
