--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -129,6 +129,14 @@
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
 				</ul>
 				
+				<h4>Prepare</h4>
+				<p>
+					Supply an interface to return a JSON object formatted as /data/userinfo.json.
+				</p>
+				<p>
+					While the client is connecting to upgrade protocol, we send an identify upstream request to get the user info, which decides whether the operation will be satisfied.
+				</p>
+				
 				<h4>Build</h4>
 				<p>
 					Note: LUA is no longer used.
