--- a/open/playease.html
+++ b/open/playease.html
@@ -142,7 +142,10 @@ playease('player').setup({
     url: '/vod/sample.flv',
     width: 640,
     height: 360,
+    type: 'vod',
     cors: 'no-cors',
+    controls: true,
+    autoplay: true,
     poster: 'sample.png',
     render: {
         name: 'flv'
@@ -161,11 +164,14 @@ _defaults = {
     url: 'http://' + window.location.host + '/vod/sample.mp4',
     width: 640,
     height: 360,
+    sources: [],
+    type: sourcetypes.LIVE,
     cors: 'no-cors',
     bufferTime: .1,
     controls: true,
     autoplay: true,
-    poster: null,
+    playsinline: true,
+    poster: '',
     render: {
         name: rendermodes.DEFAULT
     },
@@ -203,10 +209,15 @@ _eventMapping = {
     onBuffer: events.PLAYEASE_BUFFER,
     onPlay: events.PLAYEASE_PLAY,
     onPause: events.PLAYEASE_PAUSE,
+    onReload: events.PLAYEASE_RELOAD,
     onSeek: events.PLAYEASE_SEEK,
     onStop: events.PLAYEASE_STOP,
-    onVolume: events.PLAYEASE_VIEW_VOLUME,
-    onMute: events.PLAYEASE_VIEW_MUTE,
+    onReport: events.PLAYEASE_REPORT,
+    onMute: events.PLAYEASE_MUTE,
+    onVolume: events.PLAYEASE_VOLUME,
+    onHD: events.PLAYEASE_HD,
+    onBullet: events.PLAYEASE_BULLET,
+    onFullpage: events.PLAYEASE_FULLPAFE,
     onFullscreen: events.PLAYEASE_VIEW_FULLSCREEN
 };
 </pre>
@@ -215,11 +226,15 @@ _eventMapping = {
 				<ul class="latestnews">
 					<li>play(url)</li>
 					<li>pause()</li>
+					<li>reload()</li>
 					<li>seek(offset)</li>
 					<li>stop()</li>
+					<li>report()</li>
+					<li>mute()</li>
 					<li>volume(vol)</li>
-					<li>mute(bool)</li>
-					<li>fullscreen(bool)</li>
+					<li>hd()</li>
+					<li>bullet()</li>
+					<li>fullscreen()</li>
 					<li>resize(width, height)</li>
 				</ul>
 				
@@ -304,7 +319,9 @@ _eventMapping = {
 			url: '/vod/sample.flv',
 			width: 640,
 			height: 360,
+			type: 'vod',
 			cors: 'no-cors',
+			controls: true,
 			autoplay: false,
 			poster: '../images/contents/playease.poster.png',
 			render: {
