--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li>Added UI controls for <a href="https://github.com/studease/playease" target='_blank'>playease.js</a> - version 1.0.08.<i> - Apr. 17, 2017</i></li>
+					<li>First stable version of chat room released - chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released - Using WebGL.<i> - Feb. 20, 2017</i></li>
 					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An html5 flv video player.<i> - Feb. 10, 2017</i></li>
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released - A websocket server for chatting.<i> - Aug. 4, 2016</i></li>
