--- a/open/chatease-server.html
+++ b/open/chatease-server.html
@@ -126,6 +126,7 @@
 				
 				<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li>First stable version of chat room released - chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 					<li><a href="https://github.com/studease/chatease-server" target='_blank'>Chatease-server</a> beta released.<i> - Aug. 4, 2016</i></li>
 				</ul>
 				
