--- a/open/playease.html
+++ b/open/playease.html
@@ -173,6 +173,12 @@ _defaults = {
     autoplay: true,
     playsinline: true,
     poster: '',
+    bulletscreen: {
+        enable: true,
+        fontsize: 14,
+        alpha: alphas.LOW,
+        position: positions.FULLSCREEN
+    },
     render: {
         name: rendermodes.DEFAULT
     },
@@ -235,7 +241,8 @@ _eventMapping = {
 					<li>volume(vol)</li>
 					<li>hd()</li>
 					<li>bullet()</li>
-					<li>fullscreen()</li>
+					<li>fullscreen(exit)</li>
+					<li>shoot(text)</li>
 					<li>resize(width, height)</li>
 				</ul>
 				
