--- a/open/playease.html
+++ b/open/playease.html
@@ -143,7 +143,7 @@ playease('player').setup({
     url: '/vod/sample.flv',
     width: 640,
     height: 360,
-    type: 'vod',
+    type: 'live',
     cors: 'no-cors',
     controls: true,
     autoplay: true,
@@ -166,7 +166,7 @@ _defaults = {
     width: 640,
     height: 360,
     sources: [],
-    type: sourcetypes.LIVE,
+    type: sourcetypes.VOD,
     cors: 'no-cors',
     bufferTime: .1,
     controls: true,
@@ -213,19 +213,19 @@ _eventMapping = {
     onError: events.ERROR,
     onReady: events.PLAYEASE_READY,
     onMetaData: events.PLAYEASE_METADATA,
-    onBuffer: events.PLAYEASE_BUFFER,
-    onPlay: events.PLAYEASE_PLAY,
-    onPause: events.PLAYEASE_PAUSE,
-    onReload: events.PLAYEASE_RELOAD,
-    onSeek: events.PLAYEASE_SEEK,
-    onStop: events.PLAYEASE_STOP,
-    onReport: events.PLAYEASE_REPORT,
-    onMute: events.PLAYEASE_MUTE,
+    onBuffering: events.PLAYEASE_BUFFERING,
+    onPlaying: events.PLAYEASE_PLAYING,
+    onPaused: events.PLAYEASE_PAUSED,
+    onReloading: events.PLAYEASE_RELOADING,
+    onSeeking: events.PLAYEASE_SEEKING,
+    onStopped: events.PLAYEASE_STOPPED,
+    onReported: events.PLAYEASE_REPORTED,
+    onMuted: events.PLAYEASE_MUTED,
     onVolume: events.PLAYEASE_VOLUME,
     onHD: events.PLAYEASE_HD,
     onBullet: events.PLAYEASE_BULLET,
     onFullpage: events.PLAYEASE_FULLPAFE,
-    onFullscreen: events.PLAYEASE_VIEW_FULLSCREEN
+    onFullscreen: events.PLAYEASE_FULLSCREEN
 };
 </pre>
 <br/>
@@ -241,6 +241,7 @@ _eventMapping = {
 					<li>volume(vol)</li>
 					<li>hd()</li>
 					<li>bullet()</li>
+					<li>fullpage(exit)</li>
 					<li>fullscreen(exit)</li>
 					<li>shoot(text)</li>
 					<li>resize(width, height)</li>
