--- a/open/playease.html
+++ b/open/playease.html
@@ -143,7 +143,7 @@ playease('player').setup({
     url: '/vod/sample.flv',
     width: 640,
     height: 360,
-    type: 'live',
+    type: 'vod',
     cors: 'no-cors',
     controls: true,
     autoplay: true,
