--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li>Added support of self-adaption, and flash for MSIE. - <a href="https://github.com/studease/playease" target='_blank'>playease.js</a>  1.0.33.<i> - Apr. 27, 2017</i></li>
 					<li>Added UI controls for <a href="https://github.com/studease/playease" target='_blank'>playease.js</a> - version 1.0.08.<i> - Apr. 17, 2017</i></li>
 					<li>First stable version of chat room released - chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 					<li><a href="https://github.com/studease/slicease" target='_blank'>Slicease.js</a> 3.0 released - Using WebGL.<i> - Feb. 20, 2017</i></li>
