--- a/open/playease.html
+++ b/open/playease.html
@@ -129,7 +129,7 @@
 					<li><a href="https://github.com/studease/playease" target='_blank'>Playease.js</a> beta released - An html5 flv video player.<i> - Feb. 10, 2017</i></li>
 				</ul>
 				
-				<h4>Example (Uncompleted, coming soon.)</h4>
+				<h4>Example</h4>
 				<div id='fp' style='margin: 4rem auto; width: 100%; max-width: 640px; top: 0; left: 0;'>
 					<div id='player'></div>
 				</div>
