--- a/open/playease.html
+++ b/open/playease.html
@@ -332,7 +332,7 @@ _eventMapping = {
 		var height = width * 9 / 16 + 40;
 		
 		var player = playease('player').setup({
-			url: '/vod/sample.mp4',
+			url: 'http://rtmpmate.com/vod/sample.mp4',
 			width: 640,
 			height: 360,
 			type: 'vod',
