--- a/open/playease.html
+++ b/open/playease.html
@@ -118,7 +118,7 @@
 				</p>
 				
 				<p>
-					This is a HTML5 media player for FLV live streaming, FLV VoD and original HTML5 media sources, eg. Ogg, Mpeg4, WebM, HLS. It also supports RTMP streaming for MSIE with flash embed in.
+					This is a HTML5 media player for FLV live streaming, FLV VoD and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS. It also supports RTMP streaming for MSIE with flash embed in.
 					<br/>
 				</p>
 				
@@ -176,6 +176,7 @@ _defaults = {
     autoplay: true,
     playsinline: true,
     poster: '',
+    debug: false,
     bulletscreen: {
         enable: true,
         fontsize: 14,
@@ -187,7 +188,8 @@ _defaults = {
     },
     skin: {
         name: skinmodes.DEFAULT
-    }
+    },
+    events: {}
 };
 </pre>
 <br/>
