--- a/solutions.html
+++ b/solutions.html
@@ -103,7 +103,7 @@
 					</div>
 					<div>
 						<h4>ADVERTISING & PLUGINS</h4>
-						<span>Easy video ad delivery and implemention of other plugins.</span>
+						<span>Easy video ad delivery and implementation of other plugins.</span>
 					</div>
 				</a>
 				<a href='#'>
