--- a/playease.html
+++ b/playease.html
@@ -86,9 +86,13 @@
 			<h2>Example</h2>
 			<div id='fp' style='margin: 4rem auto; width: 100%; max-width: 640px; top: 0; left: 0;'>
 				<div id='player'></div>
+				<div class='input-container'>
+					<input id='url-input' value='/vod/sample.mp4' />
+					<a class='btn red' onclick='playTheURL();'>Play</a>
+				</div>
 			</div>
 			
-			<p>
+			<p style='margin-top: 8rem;'>
 				The example below will find the element with an id of "player" and render a player into it.
 			</p>
 
@@ -97,9 +101,13 @@
 &lt;div id='player'&gt;&lt;/div&gt;
 ...
 playease('player').setup({
-    url: '/vod/sample.flv',
     width: 640,
     height: 360,
+    file: '/vod/sample.flv',
+    /*sources: [{
+        file: '/vod/sample.mp4',
+        type: 'def'
+    }],*/
     type: 'vod',
     cors: 'no-cors',
     controls: true,
@@ -119,11 +127,11 @@ playease('player').setup({
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
 _defaults = {
-    url: 'http://' + window.location.host + '/vod/sample.mp4',
     width: 640,
     height: 360,
+    file: '',
     sources: [],
-    type: sourcetypes.VOD,
+    type: rendertypes.VOD,
     cors: 'no-cors',
     bufferTime: .1,
     controls: true,
@@ -296,10 +304,16 @@ _eventMapping = {
 		var width = fp.clientWidth;
 		var height = width * 9 / 16 + 40;
 		
+		fp.style.height = height + 'px';
+		
 		var player = playease('player').setup({
-			url: '/vod/sample.mp4',
 			width: 640,
 			height: 360,
+			file: '/vod/sample.flv',
+			/*sources: [{
+				file: '/vod/sample.2.mp4',
+				type: 'def'
+			}],*/
 			type: 'vod',
 			cors: 'no-cors',
 			controls: true,
@@ -311,12 +325,18 @@ _eventMapping = {
 			events: {
 				onFullpage: function(e) {
 					fp.style.margin = e.exit ? '4rem auto' : '0';
-					fp.style.height = e.exit ? 'auto' : '100%';
+					fp.style.height = e.exit ? height + 'px' : '100%';
 					fp.style.position = e.exit ? 'relative' : 'fixed';
-					fp.style['max-width'] = e.exit ? '640px' : '100%';
-					fp.style['z-index'] = e.exit ? '0' : 100;
+					fp.style.maxWidth = e.exit ? '640px' : '100%';
+					fp.style.zIndex = e.exit ? '0' : 100;
 				}
 			}
 		});
+		
+		function playTheURL() {
+			var input = document.getElementById('url-input');
+			var url = input.value;
+			player.play(url);
+		}
 	</script>
 </body>
