--- a/playease.html
+++ b/playease.html
@@ -307,12 +307,12 @@ _eventMapping = {
 		fp.style.height = height + 'px';
 		
 		var player = playease('player').setup({
-			width: 640,
-			height: 360,
-			file: '/vod/sample.flv',
+			width: width,
+			height: height,
+			file: '/vod/sample.mp4',
 			/*sources: [{
-				file: '/vod/sample.2.mp4',
-				type: 'def'
+				file: '/vod/sample.flv',
+				type: 'flv'
 			}],*/
 			type: 'vod',
 			cors: 'no-cors',
