--- a/donate.html
+++ b/donate.html
@@ -69,7 +69,7 @@
 				<p>
 					Donations will be used to fund expenses related to development (e.g. to cover equipment and server maintenance costs), 
 					to sponsor bug fixing, feature development, the participation or organization of meetings and events in the project interest area, 
-					and to support internal development or educational projects or any other activity promoting <strong>RTMPMate</strong>.
+					and to support internal development or educational projects or any other activity promoting <strong>StudEase</strong>.
 				</p>
 			</div>
 			
